--- a/compose.yaml
+++ b/compose.yaml
@@ -16,9 +16,9 @@ services:
     networks:
        - profile-network
     depends_on:
-      - mongodb
+      - database
 
-  mongodb:
+  database:
     container_name: mongoDB
     image: mongo:8.0-rc
     environment:
@@ -42,5 +42,5 @@ services:
     networks:
        - profile-network
     depends_on:
-      - mongodb
+      - database
 
