--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,13 @@
 version: '3'
+
 networks:
    profile-network:
        external: true
        name: 'mongo-network'
+
+volumes:
+  profiledata:
+
 services:
   app:
     container_name: profileapp
@@ -27,7 +32,7 @@ services:
     networks:
        - profile-network
     volumes: 
-       - ./data:/db/data 
+       - profiledata:/data/db 
 
   mongo-express:
     container_name: express
